Fixed footer overlapping content

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h4 {
 body {
   padding-top: 80px;
   background-color: #f8f8ff;
+  padding-bottom: 80px;
 }
 
 /* NAV VAR*/
@@ -151,6 +152,7 @@ body {
 @media screen and (max-width: 960px) {
   body {
     padding-top: 100px;
+    padding-bottom: 100px;
   }
 
   .floatingsocials {
